# online-chess

./: Cargo.toml  README.md
src/: main.rs  main.rs.new  models.rs
src/game/: utils.rs
src/models/: app_state.rs  game_state.rs  messages.rs  mod.rs  utils.rs  websocket.rs
src/routes/: mod.rs
src/state/: mod.rs
src/websocket/: game_handlers.rs  handler.rs
static/: index.html
static/css/: style.css
static/img/: pieces.js
static/js/: app.js  chess.js
