[package]
name = "chess_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.1"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess = "3.2.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
env_logger = "0.10.0"
log = "0.4.20"
futures = "0.3.28"
